--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
   <title>Sweet4U</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/images/logo-site-Sweet4U.png">
 </head>
 <body>
   <div class="general-wrapper">
   <app-root></app-root>
-</div>
+  </div>
 </body>
 </html>
